# toposaic

./: .env.example  .gitignore  Cargo.toml  NOTICE  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: desktop-bundles.yml
app/: desktop-updater.ts  globals.css  layout.tsx  page.tsx  releases.ts  terrain-studio.tsx  versioning.ts
apps/api/: Cargo.toml
apps/api/src/: elevation.rs  lib.rs  main.rs  surface.rs
crates/terrain-core/: Cargo.toml
crates/terrain-core/examples/: profile_generation.rs
crates/terrain-core/src/: lib.rs
docs/: color-output-plan.md  update-feeds.md
scripts/: release-feeds.mjs  write-updater-config.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: release-feeds.test.mjs  rendered-html.test.mjs
tests/ui/: control-tabs.spec.ts
