[package]
name = "toposaic-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "toposaic_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
terrain-api = { path = "../apps/api" }
terrain-core = { path = "../crates/terrain-core" }
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
