[package]
name = "terrain-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
geo.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
spade.workspace = true
ttf-parser.workspace = true
zip.workspace = true
